--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
-
+    "react-scripts": "1.1.4",
+    "styled-components": "^4.0.3"
   },
   "scripts": {
+    "docker-up": "docker-compose up -d",
+    "docker-down": "docker-compose down",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
