update project to latest node js

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Andre Merten",
-  "name": "Andre Merten",
+  "short_name": "Andreas Merten",
+  "name": "Andreas Merten",
   "icons": [
     {
       "src": "favicon.ico",
