Add docker dev ; rename About to Overview

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "styled-components": "^6.1.0"
   },
   "scripts": {
-    "docker-up": "docker-compose up -d",
-    "docker-down": "docker-compose down",
+    "docker-up": "docker compose up -d",
+    "docker-down": "docker compose down",
+    "docker-dev-up": "docker compose -f docker-compose.dev.yml up",
+    "docker-dev-down": "dockercompose -f docker-compose.dev.yml down",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
