setup pub site live

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,39 @@
-server {
-    listen 80;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri $uri/ /index.html;
+http {
+    # HTTP - Redirect to HTTPS
+    server {
+        listen 80;
+        server_name info.dremer10.com;
+
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
+    }
+
+    # HTTPS - Proxy to backend
+    server {
+        listen 443 ssl http2;
+        server_name info.dremer10.com;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/info.dremer10.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/info.dremer10.com/privkey.pem;
+
+        # SSL Settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        # Proxy to backend app
+        location / {
+            proxy_pass http://sample:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
