--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "devops" ]
   pull_request:
     branches: [ "main" ]
 
@@ -32,20 +32,22 @@ jobs:
           ${{ env.IMAGE_NAME }}:v1
           ${{ env.IMAGE_NAME }}:latest
 
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/devops') && github.event_name == 'push'
 
-  #   steps:
-  #   - name: Deploy to server
-  #     uses: appleboy/ssh-action@v1.0.0
-  #     with:
-  #       host: ${{ secrets.DEPLOY_HOST }}
-  #       username: ${{ secrets.DEPLOY_USER }}
-  #       key: ${{ secrets.DEPLOY_SSH_KEY }}
-  #       script: |
-  #         cd /path/to/pub-site
-  #         docker compose pull
-  #         docker compose up -d
-  #         docker image prune -f
+    steps:
+    - name: Deploy to server
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.DEPLOY_HOST }}
+        username: ${{ secrets.DEPLOY_USER }}
+        key: ${{ secrets.DEPLOY_SSH_KEY }}
+        port: 33001
+        script: |
+          cd /opt/pub-site
+          export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+          docker compose -f docker-compose.prod.yml pull
+          docker compose -f docker-compose.prod.yml up -d
+          docker image prune -f
