--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,28 @@ services:
 
   sample:
     container_name: Andre-Webapp
-    image: YOUR_DOCKERHUB_USERNAME/pub-site:latest
-    ports:
-      - 127.0.0.1:3333:80
+    image: ${DOCKERHUB_USERNAME}/pub-site:latest
+    expose:
+      - "80"
     restart: unless-stopped
+    networks:
+      - app-network
+
+  nginx:
+    container_name: Andre-Nginx
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - sample
+    restart: unless-stopped
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
