--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,11 +2,11 @@ FROM node:25.1.0-alpine
 
 WORKDIR /app
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 
-RUN npm install
+RUN npm ci
 
-COPY . ./
+COPY . .
 
 EXPOSE 5173
 
