--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,9 +2,10 @@ FROM node:25.1.0-alpine
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY package*.json ./
 
-RUN npm ci
+RUN npm ci && \
+    npm cache clean --force
 
 COPY . .
 
