--- a/k8s/pub-site-complete-fixed-port.yaml
+++ b/k8s/pub-site-complete-fixed-port.yaml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: pub-site
+  labels:
+    name: pub-site
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,7 +15,7 @@ metadata:
   labels:
     app: pub-site
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: pub-site
@@ -17,7 +26,8 @@ spec:
     spec:
       containers:
       - name: pub-site
-        image: DOCKERHUB_USERNAME/pub-site:latest  # ArgoCD will sync this
+        image: dremer10/pub-site:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
           name: http
@@ -40,3 +50,22 @@ spec:
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pub-site
+  namespace: pub-site
+  labels:
+    app: pub-site
+spec:
+  type: NodePort
+  selector:
+    app: pub-site
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30080  # Fixed NodePort - update HAProxy to use this port
+    protocol: TCP
+    name: http
