--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ scratch/
 
 # Deployment documentation (keep local only)
 .DEPLOYMENT.md
+k8s/*.sh
+k8s/*.md
+argocd
+scripts/*argocd*.sh
+
+# Old resume versions
+public/files/*-template.pdf
