--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -13,6 +13,7 @@ on:
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build:
@@ -30,9 +31,12 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        tags: ${{ env.IMAGE_NAME }}:test
+        tags: |
+          ${{ env.IMAGE_NAME }}:test
+          ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         outputs: type=docker,dest=/tmp/image.tar
         cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
+        cache-to: type=inline
 
     - name: Upload Docker image artifact
       uses: actions/upload-artifact@v4
@@ -191,7 +195,9 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ env.IMAGE_NAME }}:test
+        tags: |
+          ${{ env.IMAGE_NAME }}:test
+          ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
         cache-to: type=inline
 
@@ -373,7 +379,7 @@ jobs:
               spec:
                 containers:
                 - name: pub-site
-                  image: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site:test
+                  image: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site:${{ env.IMAGE_TAG }}
                   imagePullPolicy: Always
                   ports:
                   - containerPort: 80
