--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -13,13 +13,15 @@ on:
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site
-  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Set short image tag
+      run: echo "IMAGE_TAG_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -33,7 +35,7 @@ jobs:
         file: ./Dockerfile
         tags: |
           ${{ env.IMAGE_NAME }}:test
-          ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG_SHORT }}
         outputs: type=docker,dest=/tmp/image.tar
         cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
         cache-to: type=inline
@@ -147,6 +149,9 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
+    - name: Set short image tag
+      run: echo "IMAGE_TAG_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -177,6 +182,9 @@ jobs:
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
 
     steps:
+    - name: Set short image tag
+      run: echo "IMAGE_TAG_SHORT=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -197,7 +205,7 @@ jobs:
         push: true
         tags: |
           ${{ env.IMAGE_NAME }}:test
-          ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG_SHORT }}
         cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
         cache-to: type=inline
 
@@ -379,7 +387,7 @@ jobs:
               spec:
                 containers:
                 - name: pub-site
-                  image: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site:${{ env.IMAGE_TAG }}
+                  image: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site:${{ env.IMAGE_TAG_SHORT }}
                   imagePullPolicy: Always
                   ports:
                   - containerPort: 80
