--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -15,22 +15,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - name: Pull published test image
+      run: docker pull ${{ env.IMAGE_NAME }}:test
 
-    - name: Build Docker image (local only, no push)
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile
-        push: false
-        tags: ${{ env.IMAGE_NAME }}:pr-test
-        cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
-        cache-to: type=inline
-
-    - name: Run tests against built image
+    - name: Run tests against test image
       run: |
-        docker run -d -p 8080:80 --name test-container ${{ env.IMAGE_NAME }}:pr-test
+        docker run -d -p 8080:80 --name test-container ${{ env.IMAGE_NAME }}:test
         sleep 5
         docker ps | grep test-container
         curl -f -s http://localhost:8080 | grep -q "Andreas Merten" || exit 1
@@ -47,7 +37,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.IMAGE_NAME }}:pr-test
+        image-ref: ${{ env.IMAGE_NAME }}:test
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
