--- a/k8s/production.yaml
+++ b/k8s/production.yaml
@@ -75,29 +75,40 @@ spec:
     name: http
 
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: Gateway
+metadata:
+  name: pub-site-gateway
+  namespace: pub-site-prod
+spec:
+  gatewayClassName: nginx
+  listeners:
+  - name: https
+    hostname: info.dremer10.com
+    port: 443
+    protocol: HTTPS
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: pub-site-production-tls
+        kind: Secret
+
+---
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: HTTPRoute
 metadata:
   name: pub-site
   namespace: pub-site-prod
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  ingressClassName: nginx
+  parentRefs:
+  - name: pub-site-gateway
+  hostnames:
+  - info.dremer10.com
   rules:
-  - host: info.dremer10.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: pub-site
-            port:
-              number: 80
-  tls:
-  - hosts:
-    - info.dremer10.com
-    secretName: pub-site-production-tls
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    backendRefs:
+    - name: pub-site
+      port: 80
