--- a/k8s/testing.yaml
+++ b/k8s/testing.yaml
@@ -74,8 +74,7 @@ spec:
     protocol: TCP
     name: http
 
----
-apiVersion: gateway.networking.k8s.io/v1beta1
+apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: pub-site-gateway
@@ -93,15 +92,15 @@ spec:
       - name: pub-site-testing-tls
         kind: Secret
 
----
-apiVersion: gateway.networking.k8s.io/v1beta1
+apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: pub-site
   namespace: pub-site-dev
 spec:
   parentRefs:
-  - name: pub-site-gateway
+  - name: global-gateway
+    namespace: nginx-gateway
   hostnames:
   - info-dev.dremer10.com
   rules:
