--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -212,125 +212,12 @@ jobs:
         key: ${{ secrets.DEPLOY_SSH_KEY }}
         port: 33001
         script: |
-          kubectl apply -f - <<EOF
-          $(cat <<'YAML'
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: pub-site-prod
-            labels:
-              name: pub-site-prod
-
-          ---
-          apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: pub-site
-            namespace: pub-site-prod
-            labels:
-              app: pub-site
-              environment: production
-          spec:
-            replicas: 2
-            selector:
-              matchLabels:
-                app: pub-site
-                environment: production
-            template:
-              metadata:
-                labels:
-                  app: pub-site
-                  environment: production
-              spec:
-                containers:
-                - name: pub-site
-                  image: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site:latest
-                  imagePullPolicy: Always
-                  ports:
-                  - containerPort: 80
-                    name: http
-                  resources:
-                    requests:
-                      memory: "16Mi"
-                      cpu: "10m"
-                    limits:
-                      memory: "32Mi"
-                      cpu: "50m"
-                  livenessProbe:
-                    httpGet:
-                      path: /
-                      port: 80
-                    initialDelaySeconds: 10
-                    periodSeconds: 10
-                  readinessProbe:
-                    httpGet:
-                      path: /
-                      port: 80
-                    initialDelaySeconds: 5
-                    periodSeconds: 5
-
-          ---
-          apiVersion: v1
-          kind: Service
-          metadata:
-            name: pub-site
-            namespace: pub-site-prod
-            labels:
-              app: pub-site
-              environment: production
-          spec:
-            type: ClusterIP
-            selector:
-              app: pub-site
-              environment: production
-            ports:
-            - port: 80
-              targetPort: 80
-              protocol: TCP
-              name: http
-
-          ---
-          apiVersion: gateway.networking.k8s.io/v1beta1
-          kind: Gateway
-          metadata:
-            name: pub-site-gateway
-            namespace: pub-site-prod
-          spec:
-            gatewayClassName: nginx
-            listeners:
-            - name: https
-              hostname: info.dremer10.com
-              port: 443
-              protocol: HTTPS
-              tls:
-                mode: Terminate
-                certificateRefs:
-                - name: pub-site-production-tls
-                  kind: Secret
-
-          ---
-          apiVersion: gateway.networking.k8s.io/v1beta1
-          kind: HTTPRoute
-          metadata:
-            name: pub-site
-            namespace: pub-site-prod
-          spec:
-            parentRefs:
-            - name: pub-site-gateway
-            hostnames:
-            - info.dremer10.com
-            rules:
-            - matches:
-              - path:
-                  type: PathPrefix
-                  value: /
-              backendRefs:
-              - name: pub-site
-                port: 80
-          YAML
-          )
-          EOF
-
+          # Apply shared Gateway issuer/certs and global gateway
+          kubectl apply -f k8s/clusterissuer-gateway.yaml
+          kubectl apply -f k8s/global-gateway.yaml
+          kubectl apply -f k8s/certificates.yaml
+          # Apply app manifests (HTTPRoute points to global-gateway)
+          kubectl apply -f k8s/production.yaml
           kubectl rollout status deployment/pub-site -n pub-site-prod --timeout=5m
 
   deploy-testing:
@@ -350,125 +237,12 @@ jobs:
         key: ${{ secrets.DEPLOY_SSH_KEY }}
         port: 33001
         script: |
-          kubectl apply -f - <<EOF
-          $(cat <<'YAML'
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: pub-site-dev
-            labels:
-              name: pub-site-dev
-
-          ---
-          apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: pub-site
-            namespace: pub-site-dev
-            labels:
-              app: pub-site
-              environment: testing
-          spec:
-            replicas: 1
-            selector:
-              matchLabels:
-                app: pub-site
-                environment: testing
-            template:
-              metadata:
-                labels:
-                  app: pub-site
-                  environment: testing
-              spec:
-                containers:
-                - name: pub-site
-                  image: ${{ secrets.DOCKERHUB_USERNAME }}/pub-site:test
-                  imagePullPolicy: Always
-                  ports:
-                  - containerPort: 80
-                    name: http
-                  resources:
-                    requests:
-                      memory: "12Mi"
-                      cpu: "5m"
-                    limits:
-                      memory: "24Mi"
-                      cpu: "25m"
-                  livenessProbe:
-                    httpGet:
-                      path: /
-                      port: 80
-                    initialDelaySeconds: 10
-                    periodSeconds: 10
-                  readinessProbe:
-                    httpGet:
-                      path: /
-                      port: 80
-                    initialDelaySeconds: 5
-                    periodSeconds: 5
-
-          ---
-          apiVersion: v1
-          kind: Service
-          metadata:
-            name: pub-site
-            namespace: pub-site-dev
-            labels:
-              app: pub-site
-              environment: testing
-          spec:
-            type: ClusterIP
-            selector:
-              app: pub-site
-              environment: testing
-            ports:
-            - port: 80
-              targetPort: 80
-              protocol: TCP
-              name: http
-
-          ---
-          apiVersion: gateway.networking.k8s.io/v1beta1
-          kind: Gateway
-          metadata:
-            name: pub-site-gateway
-            namespace: pub-site-dev
-          spec:
-            gatewayClassName: nginx
-            listeners:
-            - name: https
-              hostname: info-dev.dremer10.com
-              port: 443
-              protocol: HTTPS
-              tls:
-                mode: Terminate
-                certificateRefs:
-                - name: pub-site-testing-tls
-                  kind: Secret
-
-          ---
-          apiVersion: gateway.networking.k8s.io/v1beta1
-          kind: HTTPRoute
-          metadata:
-            name: pub-site
-            namespace: pub-site-dev
-          spec:
-            parentRefs:
-            - name: pub-site-gateway
-            hostnames:
-            - info-dev.dremer10.com
-            rules:
-            - matches:
-              - path:
-                  type: PathPrefix
-                  value: /
-              backendRefs:
-              - name: pub-site
-                port: 80
-          YAML
-          )
-          EOF
-
+          # Apply shared Gateway issuer/certs and global gateway
+          kubectl apply -f k8s/clusterissuer-gateway.yaml
+          kubectl apply -f k8s/global-gateway.yaml
+          kubectl apply -f k8s/certificates.yaml
+          # Apply app manifests (HTTPRoute points to global-gateway)
+          kubectl apply -f k8s/testing.yaml
           kubectl rollout status deployment/pub-site -n pub-site-dev --timeout=5m
 
     - name: Comment PR with testing URL
