--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -218,6 +218,7 @@ jobs:
           kubectl apply -f "$RAW_BASE/k8s/global-gateway.yaml"
           kubectl apply -f "$RAW_BASE/k8s/certificates.yaml"
           kubectl apply -f "$RAW_BASE/k8s/production.yaml"
+          kubectl rollout restart deployment/pub-site -n pub-site-prod
           kubectl rollout status deployment/pub-site -n pub-site-prod --timeout=5m
 
   deploy-testing:
@@ -243,6 +244,7 @@ jobs:
           kubectl apply -f "$RAW_BASE/k8s/global-gateway.yaml"
           kubectl apply -f "$RAW_BASE/k8s/certificates.yaml"
           kubectl apply -f "$RAW_BASE/k8s/testing.yaml"
+          kubectl rollout restart deployment/pub-site -n pub-site-dev
           kubectl rollout status deployment/pub-site -n pub-site-dev --timeout=5m
 
     - name: Comment PR with testing URL
