--- a/k8s/testing.yaml
+++ b/k8s/testing.yaml
@@ -80,7 +80,7 @@ metadata:
   name: pub-site-gateway
   namespace: pub-site-dev
 spec:
-  gatewayClassName: nginx
+  gatewayClassName: nginx-gateway
   listeners:
   - name: https
     hostname: info-dev.dremer10.com
