--- a/k8s/global-gateway.yaml
+++ b/k8s/global-gateway.yaml
@@ -6,6 +6,13 @@ metadata:
 spec:
   gatewayClassName: nginx-gateway
   listeners:
+  - name: acme-http
+    hostname: "*.dremer10.com"
+    port: 80
+    protocol: HTTP
+    allowedRoutes:
+      namespaces:
+        from: All
   - name: devops-toolkit
     hostname: devops-toolkit.dremer10.com
     port: 443
