--- a/k8s/quiz.yaml
+++ b/k8s/quiz.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: quiz
-        image: ${{ secrets.DOCKERHUB_USERNAME }}/quiz-terminal:latest
+        image: dremer10/quiz-terminal:latest
         ports:
         - containerPort: 7681
           name: ws
