add multi-stage to reduce image size

--- a/terminal/Dockerfile
+++ b/terminal/Dockerfile
@@ -1,13 +1,16 @@
-FROM node:20-alpine
-
+# Builder: install only what we need to compile native deps (node-pty)
+FROM node:20-alpine AS build
 WORKDIR /app
-
-# Install docker CLI + build deps for node-pty + bash for shell sessions
-RUN apk add --no-cache docker-cli python3 make g++ bash
-
+RUN apk add --no-cache python3 make g++
 COPY package*.json ./
-RUN npm install --production
+# Use npm install to tolerate missing lockfile
+RUN npm install --omit=dev
 
+# Runner: small runtime with docker CLI + bash
+FROM node:20-alpine AS runner
+WORKDIR /app
+RUN apk add --no-cache docker-cli bash
+COPY --from=build /app/node_modules ./node_modules
 COPY server.js .
 COPY public ./public
 
