--- a/k8s/global-gateway.yaml
+++ b/k8s/global-gateway.yaml
@@ -121,6 +121,13 @@ spec:
     allowedRoutes:
       namespaces:
         from: All
+  - name: pub-site-dev-http
+    hostname: info-dev.dremer10.com
+    port: 80
+    protocol: HTTP
+    allowedRoutes:
+      namespaces:
+        from: All
   - name: quiz
     hostname: quiz.dremer10.com
     port: 443
